Fix header positioning by ensuring left alignment and z-index is set

--- a/portfolio_styles.css
+++ b/portfolio_styles.css
@@ -8,6 +8,8 @@ header {
     position: sticky;
     top: 0;
     right: 0;
+    left: 0;
+    z-index: 10;
 }
 
 .link-head {
